fix z-index errors with movie cards

--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -31,6 +31,7 @@
 		width: 100%;
 		border-radius: 5px;
 		box-shadow: 0px 2px 15px rgba(0,0,0,0.3);
+		z-index: 100;
 	}
 }
 
