--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -12,6 +12,7 @@
 	background: #1d3640;
 	color: #fff;
 	box-shadow: 1px 0px 15px rgba(0,0,0,0.3);
+	z-index: 1000;
 }
 
 .title {
